--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,52 +1,59 @@
 pipeline {
   agent {
     docker {
-      image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // Mount Docker socket to access the host's Docker daemon
+      image 'sumukh2306/maven-docker-java17:latest'  // Your custom image with Java 17
+      args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
     }
   }
+  environment {
+    SONAR_URL = "http://13.127.127.107:9000"
+    GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
+    GIT_USER_NAME = "sumukh2306"
+    DOCKER_IMAGE = "sumukh2306/ultimate-cicd:${BUILD_NUMBER}"
+  }
   stages {
+    stage('Check Java Version') {
+      steps {
+        sh 'java -version'    // Check Java 17 version
+        sh 'echo $JAVA_HOME'   // Verify JAVA_HOME path
+      }
+    }
     stage('Checkout') {
       steps {
-        git branch: 'main', url: 'https://github.com/sumukh2306/Jenkins-Zero-To-Hero.git' // Your forked repo URL
+        git branch: 'main', url: 'https://github.com/sumukh2306/Jenkins-Zero-To-Hero.git'
       }
     }
     stage('Build and Test') {
       steps {
         sh 'ls -ltr'
-        // Build the project and create a JAR file
         sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
       }
     }
     stage('Static Code Analysis') {
-      environment {
-        SONAR_URL = "http://13.127.127.107:9000"
-      }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+          sh '''
+            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app 
+            mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
+          '''
         }
       }
     }
     stage('Build and Push Docker Image') {
-      environment {
-        DOCKER_IMAGE = "sumukh2306/ultimate-cicd:${BUILD_NUMBER}"
-      }
       steps {
         script {
-          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+          sh '''
+            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app 
+            docker build -t ${DOCKER_IMAGE} .
+          '''
           def dockerImage = docker.image("${DOCKER_IMAGE}")
-          docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {  // Using credentials ID
+          docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
             dockerImage.push()
           }
         }
       }
     }
     stage('Update Deployment File') {
-      environment {
-        GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
-        GIT_USER_NAME = "sumukh2306"
-      }
       steps {
         withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
           sh '''
