--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,8 +1,8 @@
 pipeline {
   agent {
     docker {
-      image 'sumukh2306/maven-docker-java17:latest'  // Your custom image with Java 17
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+      image 'abhishekf5/maven-abhishek-docker-agent:v1'
+      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // Mount Docker socket to access the host's Docker daemon
     }
   }
   environment {
@@ -12,12 +12,6 @@ pipeline {
     DOCKER_IMAGE = "sumukh2306/ultimate-cicd:${BUILD_NUMBER}"
   }
   stages {
-    stage('Check Java Version') {
-      steps {
-        sh 'java -version'    // Check Java 17 version
-        sh 'echo $JAVA_HOME'   // Verify JAVA_HOME path
-      }
-    }
     stage('Checkout') {
       steps {
         git branch: 'main', url: 'https://github.com/sumukh2306/Jenkins-Zero-To-Hero.git'
@@ -33,7 +27,7 @@ pipeline {
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
           sh '''
-            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app 
+            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
             mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
           '''
         }
@@ -42,13 +36,12 @@ pipeline {
     stage('Build and Push Docker Image') {
       steps {
         script {
-          sh '''
-            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app 
-            docker build -t ${DOCKER_IMAGE} .
-          '''
-          def dockerImage = docker.image("${DOCKER_IMAGE}")
-          docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-            dockerImage.push()
+          // Build the Docker image
+          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+          
+          // Push the image to Docker Hub
+          docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {  
+            sh "docker push ${DOCKER_IMAGE}"
           }
         }
       }
