--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,66 +1,66 @@
 pipeline {
-    agent any
-
-    tools {
-        jdk 'JDK17' // Make sure you've added this in Jenkins > Global Tool Configuration
+  agent {
+    docker {
+      image 'abhishekf5/maven-abhishek-docker-agent:v1'
+      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // Mount Docker socket to access the host's Docker daemon
     }
-
-    environment {
-        DOCKER_IMAGE = "premgowda07/springbootapp" // Replace with your image name
-        DOCKER_TAG = "v1"
-        REGISTRY_CREDENTIALS = 'dockerhub' // ID of your Docker Hub credentials in Jenkins
-        SONAR_TOKEN = credentials('sonarqube-token') // ID of your SonarQube token credentials in Jenkins
+  }
+  stages {
+    stage('Checkout') {
+      steps {
+        git branch: 'main', url: 'https://github.com/Sumukh2306/Jenkins-Zero-To-Hero.git'
+      }
     }
-
-    stages {
-        stage('Checkout') {
-            steps {
-                git 'https://github.com/YourRepo/spring-boot-demo.git' // Replace with your repo URL
+    stage('Build and Test') {
+      steps {
+        sh 'ls -ltr'
+        // Build the project and create a JAR file
+        sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
+      }
+    }
+    stage('Static Code Analysis') {
+      environment {
+        SONAR_URL = "http://13.127.127.107:9000"  // Your SonarQube URL
+      }
+      steps {
+        withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
+          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+        }
+      }
+    }
+    stage('Build and Push Docker Image') {
+      environment {
+        DOCKER_IMAGE = "sumukh2306/ultimate-cicd:${BUILD_NUMBER}"  // Your Docker Hub repo name
+        REGISTRY_CREDENTIALS = credentials('docker-cred')  // Docker Hub credentials in Jenkins
+      }
+      steps {
+        script {
+            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+            def dockerImage = docker.image("${DOCKER_IMAGE}")
+            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                dockerImage.push()
             }
         }
-
-        stage('Build and Test') {
-            steps {
-                sh './mvnw clean install'
-            }
+      }
+    }
+    stage('Update Deployment File') {
+        environment {
+            GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
+            GIT_USER_NAME = "Sumukh2306"
         }
-
-        stage('SonarQube Analysis') {
-            steps {
-                withSonarQubeEnv('SonarQube') { // Make sure SonarQube is configured in Jenkins
-                    sh './mvnw sonar:sonar -Dsonar.login=$SONAR_TOKEN'
-                }
-            }
-        }
-
-        stage('Build Docker Image') {
-            steps {
-                script {
-                    sh """
-                    docker build -t $DOCKER_IMAGE:$DOCKER_TAG .
-                    """
-                }
-            }
-        }
-
-        stage('Push Docker Image') {
-            steps {
-                script {
-                    docker.withRegistry('', REGISTRY_CREDENTIALS) {
-                        sh "docker push $DOCKER_IMAGE:$DOCKER_TAG"
-                    }
-                }
-            }
-        }
-
-        stage('Update Deployment File') {
-            steps {
-                script {
-                    sh """
-                    sed -i 's|premgowda07/springbootapp:.*|$DOCKER_IMAGE:$DOCKER_TAG|g' deployment.yaml
-                    """
-                }
+        steps {
+            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                sh '''
+                    git config user.email "sumukh2306@gmail.com"
+                    git config user.name "Sumukh"
+                    BUILD_NUMBER=${BUILD_NUMBER}
+                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                '''
             }
         }
     }
+  }
 }
