--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         docker {
             image 'sumukh2306/maven-docker-agent:v1'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+            args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // Mount Docker socket to access the host's Docker daemon
         }
     }
     stages {
@@ -11,51 +11,44 @@ pipeline {
                 git branch: 'main', url: 'https://github.com/Sumukh2306/Jenkins-Zero-To-Hero.git'
             }
         }
-        
         stage('Build and Test') {
             steps {
                 sh 'ls -ltr'
+                // Build the project and create a JAR file
                 sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
             }
         }
-        
         stage('Static Code Analysis') {
             environment {
-                SONAR_URL = "http://13.127.127.107:9000"
+                SONAR_URL = "http://13.127.127.107:9000"  // Your SonarQube URL
             }
             steps {
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
                     sh '''
-                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app 
                         mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
                     '''
                 }
             }
         }
-        
         stage('Build and Push Docker Image') {
             environment {
-                DOCKER_IMAGE = "sumukh2306/ultimate-cicd:${BUILD_NUMBER}"
+                DOCKER_IMAGE = "sumukh2306/ultimate-cicd:${BUILD_NUMBER}"  // Your Docker Hub repo name
+                REGISTRY_CREDENTIALS = credentials('docker-cred')  // Docker Hub credentials in Jenkins
             }
             steps {
                 script {
-                    // Build the Docker image
                     sh '''
-                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app 
                         docker build -t ${DOCKER_IMAGE} .
                     '''
-                    
-                    // Test Docker image creation
-                    sh 'docker images'
-
-                    // Push the Docker image
-                    docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-                        sh 'docker push ${DOCKER_IMAGE}'
+                    def dockerImage = docker.image("${DOCKER_IMAGE}")
+                    docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                        dockerImage.push()
                     }
                 }
             }
         }
-        
         stage('Update Deployment File') {
             environment {
                 GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
@@ -64,6 +57,7 @@ pipeline {
             steps {
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     sh '''
+                        cd $WORKSPACE  # Go to the root of the repository
                         git config user.email "sumukh2306@gmail.com"
                         git config user.name "Sumukh"
                         sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
